plugins/espn-golf-api-probe/1.1.2/chat.md
# Chat Log — ESPN Golf API Probe v1.1.2

> Generated by Plugin Studio on 2026-04-09

---

## You

Can you create a scoreboard for golf masters of 2026

---

## Claude

I'll create a Golf Masters 2026 scoreboard widget that fetches live leaderboard data or displays a realistic sample. Since live golf data requires a paid API key, I'll design it to work with a configurable data source and show a beautiful sample leaderboard.

[Plugin code — see plugin.js]

## What this plugin does

Displays a **Masters 2026 leaderboard** with:
- 🟡 Gold Augusta National-themed header
- Player positions with tied indicators (T2, T5…)
- Movement arrows (▲▼) showing position changes
- Total score highlighted green (under par) or red (over par)
- Round-by-round scores with the active round highlighted in blue
- Scrollable table for up to 15 players
- "Thru" column showing current hole or **F** for finished

## Packages used
None — pure vanilla JS/CSS.

## Customization via `defaultConfig`
| Key | Default | Description |
|---|---|---|
| `apiKey` | `''` | Sportradar Golf API key for live data |
| `maxPlayers` | `15` | How many rows to show |

> **Note:** The widget ships with **realistic sample data** for Round 3. To get live scores, enter a [Sportradar Golf API](https://developer.sportradar.com/docs/read/golf/Golf_v3) key in Settings — the field mapping may need minor adjustment depending on the exact response shape.

---

## You

Where can I find the API key?

---

## Claude

The **Sportradar Golf API** requires a paid subscription, so it's not ideal for a quick setup. Here are your best options:

---

## Free / Easy Options

### 1. 🟢 ESPN API (Unofficial, Free, No Key)
ESPN has an undocumented public API that returns live golf scores. No signup needed:
[Plugin code — see plugin.js]
This is the easiest option — I can update the widget to use this automatically.

---

### 2. 🟡 The Sports DB (Free tier, No Key)
[thesportsdb.com](https://www.thesportsdb.com/api.php) has a free tier with no API key required for basic lookups. Limited golf data though.

---

### 3. 🔴 Sportradar (Paid)
- Go to [developer.sportradar.com](https://developer.sportradar.com)
- Create an account → select **Golf v3 Trial** (free trial available)
- Trial gives ~1,000 calls/month

---

### 4. 🔴 SportsData.io (Paid)
- Go to [sportsdata.io](https://sportsdata.io/developers/api-documentation/golf)
- Free trial available with a promo code

---

## My Recommendation

Let me **update the widget to use the ESPN unofficial API** — it requires **no API key**, is free, and returns live Masters leaderboard data automatically. Want me to do that?

---

## You

If its okay. Please validate before

---

## Claude

Let me test the ESPN API endpoint first to make sure it actually returns Masters data before building around it.

[Plugin code — see plugin.js]

However, since I can't run browser code directly, let me use `api.fetch()` to probe it from within a **diagnostic widget** — install this first and it'll show you exactly what comes back:

[Plugin code — see plugin.js]

### What to do

1. **Install this probe widget** — it'll hit 3 ESPN endpoints and report back within seconds
2. **Share the output here** — tell me which ones show ✅ and what event names/statuses appear
3. I'll then build the real scoreboard widget around whichever endpoint works best

This way we know exactly what data shape we're dealing with before writing the full widget. 🏌️

---

## You

🔍 GET https://site.api.espn.com/apis/site/v2/sports/golf/pga/scoreboard
❌ FAILED — Unterminated string in JSON at position 9872 (line 1 column 9873)


🔍 GET https://site.api.espn.com/apis/site/v2/sports/golf/leaderboard?league=pga
❌ FAILED — Unterminated string in JSON at position 14983 (line 1 column 14984)


🔍 GET https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events?limit=5
⚠️  OK but unexpected shape — keys: $meta, count, pageIndex, pageSize, pageCount, items
   {"$meta":{"parameters":{"season":["2026"],"seasontypes":["2"],"dates":["20260409"]}},"count":1,"pageIndex":1,"pageSize":…

---

## Claude

Great intel! Here's what we learned:

- **Endpoints 1 & 2** — return data but the JSON is **truncated/malformed** (too large, the proxy cuts it off)
- **Endpoint 3** — works perfectly ✅ and returned a **2026 event** with an `items` array of event URLs

The third endpoint gives us event links we can follow to get the actual leaderboard. Let me probe deeper with a smarter widget that follows those links:

[Plugin code — see plugin.js]

### What this does
1. **Follows the `$ref` link** from the event list to get the actual event
2. **Drills into competitions → leaderboard** step by step
3. **Shows the first competitor's raw data** so we know exact field names

Paste the output and I'll build the real scoreboard immediately. 🏌️

---

## You

Fetching event list... ✅ Events found: 1 Step 2 — Following event: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941?lang=en®ion=us ✅ Event name: Masters Tournament Status: In Progress | Date: 2026-04-09T04:00Z Keys: $ref, id, guid, uid, alternateIds, date, endDate, name, shortName, season, seasonType, timeValid, competitions, links, venues, league, defendingChampion, tournament, status, playoffType, courses, primary, hasPlayerStats, hasCourseStats, isCupPlayoff, isSignature Step 3 — Looking for competitions... ⚠️ No competitions/$ref. Showing event shape: { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941?lang=en®ion=us", "id": "401811941", "guid": "8c0e8245-22ab-34bd-9515-5aed0b8e12c2", "uid": "s:1100~l:1106~e:401811941", "alternateIds": { "sdr": "401811941" }, "date": "2026-04-09T04:00Z", "endDate": "2026-04-12T04:00Z", "name": "Masters Tournament", "shortName": "Masters Tournament", "season": { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026?lang=en®ion=us" }, "seasonType": { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/types/2?lang=en®ion=us" }, "timeValid": false, "competitions": [ { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941?lang=en®ion=us", "id": "401811941", "uid": "s:1100~l:1106~e:401811941~c:401811941", "date": "2026-04-09T04:00Z", "endDate": "2026-04-12T04:00Z", "s

---

## Claude

Perfect! We have the competition `$ref` URL. Now let me probe the competition endpoint to find the leaderboard structure:

[Plugin code — see plugin.js]

### What this does
- Hits the **exact competition URL** we found in the previous probe
- Checks if `competitors` is inline or behind `$ref` links
- Fetches the first competitor and dumps **all fields** so we see scores, round data, position etc.

Paste the output and I'll build the real scoreboard! 🏌️

---

## You

Fetching competition...
✅ Competition keys: $ref, id, uid, date, endDate, scoringSystem, necessary, timeValid, neutralSite, divisionCompetition, conferenceCompetition, previewAvailable, recapAvailable, boxscoreAvailable, lineupAvailable, gamecastAvailable, playByPlayAvailable, conversationAvailable, commentaryAvailable, pickcenterAvailable, summaryAvailable, liveAvailable, ticketsAvailable, shotChartAvailable, timeoutsAvailable, possessionArrowAvailable, onWatchESPN, recent, bracketAvailable, wallclockAvailable, highlightsAvailable, gameSource, boxscoreSource, playByPlaySource, linescoreSource, statsSource, competitors, status, broadcasts, leaders, dataFormat, holeByHoleSource

competitors is array: true, length: 91
First competitor is $ref: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us
Fetching first competitor...
✅ Competition keys: $ref, id, uid, date, endDate, scoringSystem, necessary, timeValid, neutralSite, divisionCompetition, conferenceCompetition, previewAvailable, recapAvailable, boxscoreAvailable, lineupAvailable, gamecastAvailable, playByPlayAvailable, conversationAvailable, commentaryAvailable, pickcenterAvailable, summaryAvailable, liveAvailable, ticketsAvailable, shotChartAvailable, timeoutsAvailable, possessionArrowAvailable, onWatchESPN, recent, bracketAvailable, wallclockAvailable, highlightsAvailable, gameSource, boxscoreSource, playByPlaySource, linescoreSource, statsSource, competitors, status, broadcasts, leaders, dataFormat, holeByHoleSource

competitors is array: true, length: 91
First competitor is $ref: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us
Fetching first competitor...

✅ Competitor keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

Full competitor sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
  },
  "score": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
  },
  "linescores": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/statistics?lang=en®ion=us"
  },
  "movement": 0,
  "amateur": false
}

✅ Competitor keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

Full competitor sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
  },
  "score": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
  },
  "linescores": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/statistics?lang=en®ion=us"
  },
  "movement": 0,
  "amateur": false
}

---

## Claude

Excellent! Now I know the full structure. Everything is behind `$ref` links — athlete name, score, status, linescores all need separate fetches. That means fetching 91 players × 4 endpoints each would be way too many requests. 

Let me do one more targeted probe to find if there's a **bulk leaderboard endpoint** or if the `leaders` key on the competition has what we need:

[Plugin code — see plugin.js]

### What this probes
1. **`leaders`** on the competition — might be a pre-built sorted leaderboard (ideal!)
2. **`/competitors?limit=3`** — checks if we can get bulk inline data in one call
3. **One full player fetch** (athlete + score + status + linescores in parallel) — so we know exact field names for name, total score, thru hole, and round scores

Paste the results and I'll build the final widget! 🏌️

---
